# build-with-opus

./: .clang-format  .gitignore  .gitmodules  .mcp.json  .worktreeinclude  CLAUDE.local.md.example  CLAUDE.md  CMakeLists.txt  Cargo.toml  HOW_TO_RUN.md  IMPLEMENTATION_GUIDE.md  Makefile  PROMPTS.md  README.md  cfe  compose.yaml  docker-compose.yml  osal  psp
.cargo/: audit.toml
.ci/: cfs-runtime.Dockerfile  cfs.Dockerfile  fault_injector.Dockerfile  gazebo.Dockerfile  ground_station.Dockerfile  markdown-link-check.json  package-lock.json  package.json  ros2.Dockerfile
.claude/: settings.json  settings.local.json.example
.claude/agents/: architect.md  code-reviewer.md  debugger.md  researcher.md
.claude/commands/: fix-issue.md  standup.md
.claude/hooks/: format-on-save.sh  notify-done.sh  protect-secrets.sh
.claude/output-styles/: concise.md  educational.md
.claude/rules/: cfs-apps.md  (+4 more)
_defs/: cfs_app_template.cmake  cfs_platform_cfg.h  mids.h  mission_config.h  targets.cmake  unit_test_template.c.in
apps/: README.md
apps/sample_app/: CMakeLists.txt  README.md
apps/sample_app/fsw/src/: cfe.h  sample_app.c  sample_app.h  sample_app_events.h  sample_app_version.h
apps/sample_app/fsw/unit-test/: sample_app_test.c
cfs/: README.md
docs/: GLOSSARY.md  README.md  REPO_MAP.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
ros2_ws/: README.md
ros2_ws/src/fleet_monitor/: CMakeLists.txt  package.xml
ros2_ws/src/fleet_monitor/include/fleet_monitor/: fleet_monitor_node.hpp
ros2_ws/src/fleet_monitor/src/: fleet_monitor_node.cpp
ros2_ws/src/fleet_monitor/test/: test_fleet_monitor.cpp
ros2_ws/src/rover_bringup/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/rover_bringup/config/: rover_params.yaml
ros2_ws/src/rover_bringup/launch/: rover.launch.py  sim.launch.py
ros2_ws/src/rover_bringup/test/: test_sim_launch.py
ros2_ws/src/rover_common/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/rover_common/include/rover_common/: lifecycle_base.hpp  link_state_bridge.hpp  qos.hpp  tm_bridge.hpp
ros2_ws/src/rover_common/msg/: Hk.msg  LinkState.msg  SimFault.msg  Tc.msg
ros2_ws/src/rover_common/src/: link_state_bridge.cpp  tm_bridge.cpp
ros2_ws/src/rover_common/test/: test_link_state_bridge.cpp  test_tm_bridge.cpp
ros2_ws/src/rover_cryobot/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/rover_cryobot/include/rover_cryobot/: drill_ctrl_node.hpp  hdlc_lite.hpp  tether_client.hpp
ros2_ws/src/rover_cryobot/src/: drill_ctrl_node.cpp  hdlc_lite.cpp  tether_client.cpp
ros2_ws/src/rover_cryobot/test/: test_rover_cryobot.cpp
ros2_ws/src/rover_examples/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/rover_examples/include/rover_examples/: hdlc_example.hpp  tether_pipeline_example.hpp  tm_bridge_example.hpp
ros2_ws/src/rover_examples/src/: examples_main.cpp  hdlc_example.cpp  tether_pipeline_example.cpp  tm_bridge_example.cpp
ros2_ws/src/rover_examples/test/: test_examples.cpp
ros2_ws/src/rover_land/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/rover_land/include/rover_land/: nav_node.hpp
ros2_ws/src/rover_land/src/: nav_node.cpp
ros2_ws/src/rover_land/test/: test_rover_land.cpp
ros2_ws/src/rover_teleop/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/rover_teleop/include/rover_teleop/: teleop_node.hpp
ros2_ws/src/rover_teleop/src/: teleop_node.cpp
ros2_ws/src/rover_teleop/test/: test_teleop.cpp
ros2_ws/src/rover_uav/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/rover_uav/include/rover_uav/: flight_ctrl_node.hpp
ros2_ws/src/rover_uav/src/: flight_ctrl_node.cpp
ros2_ws/src/rover_uav/test/: test_rover_uav.cpp
rust/: README.md
rust/_lint_probe/: Cargo.toml
rust/_lint_probe/src/: lib.rs
rust/cfs_bindings/: CHANGELOG.md  Cargo.toml  build.rs
rust/cfs_bindings/src/: convert.rs  lib.rs  message.rs  mids.rs
rust/cfs_bindings/tests/: roundtrip.rs
rust/ground_station/: CHANGELOG.md  Cargo.toml  README.md
rust/ground_station/examples/: README.md  cfdp_session.rs  cfs_bridge.rs  mfile_reassembly.rs  pipeline_demo.rs  uplink_session.rs
rust/ground_station/src/: lib.rs  main.rs  telemetry.rs
rust/ground_station/src/cfdp/: adapter.rs  class1.rs  mod.rs
rust/ground_station/src/ingest/: decoder.rs  demux.rs  framer.rs  mod.rs  router.rs  sinks.rs
rust/ground_station/src/mfile/: mod.rs
rust/ground_station/src/ui/: mod.rs  time.rs
rust/ground_station/src/uplink/: builder.rs  cop1.rs  dispatcher.rs  framer.rs  mod.rs
scripts/: apid_mid_lint.py  citation_lint.py  coverage-gate.sh  cppcheck-gate.sh  grep-lints.sh  integration_smoke_test.sh  mermaid-parse.sh  setup-cfs-submodules.sh  sitl-smoke.sh  start_full_stack.sh  traceability-lint.py  verify_phase_01.sh
simulation/: README.md
simulation/fault_injector/: CMakeLists.txt
simulation/fault_injector/include/: fault_injector.h  spp_encoder.h
simulation/fault_injector/src/: fault_injector.cpp  main.cpp  spp_encoder.cpp
simulation/fault_injector/test/: fault_injector_test.cpp
simulation/gazebo_cryobot_plugin/: CMakeLists.txt
simulation/gazebo_cryobot_plugin/include/: cryobot_physics_core.h  cryobot_physics_plugin.h
simulation/gazebo_cryobot_plugin/src/: cryobot_physics_plugin.cpp
simulation/gazebo_cryobot_plugin/test/: cryobot_plugin_test.cpp
simulation/gazebo_rover_plugin/: CMakeLists.txt
simulation/gazebo_rover_plugin/include/: rover_drive_plugin.h
simulation/gazebo_rover_plugin/src/: rover_drive_plugin.cpp
simulation/gazebo_uav_plugin/: CMakeLists.txt
simulation/gazebo_uav_plugin/include/: uav_flight_core.h  uav_flight_plugin.h
simulation/gazebo_uav_plugin/src/: uav_flight_plugin.cpp
simulation/gazebo_uav_plugin/test/: uav_plugin_test.cpp
simulation/gazebo_world_plugin/: CMakeLists.txt
simulation/gazebo_world_plugin/include/: world_environment_core.h  world_environment_plugin.h
simulation/gazebo_world_plugin/src/: world_environment_plugin.cpp
simulation/gazebo_world_plugin/test/: world_plugin_test.cpp
tools/: CMakeLists.txt
(+283 files in other folders)
