# Phase 01 Red-test fixture. Nested workspace — deliberately NOT a member
# of the root workspace (see /Cargo.toml `[workspace.members]`). Its sole
# purpose is to verify that the Phase 01 lint block denies `unsafe_code`
# and that the `.cargo/config.toml` rustflags turn `unused_imports` into
# a build error.
#
# The lint block below MUST stay in sync with the root workspace lint
# block in /Cargo.toml — if you add/remove lints there, mirror them here.
# This duplication is the cost of keeping this fixture isolated from the
# main workspace so `cargo build --workspace` at the root remains green.

[package]
name = "_lint_probe"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all      = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }

unwrap_used        = "deny"
expect_used        = "deny"
panic              = "deny"
indexing_slicing   = "warn"
cast_lossless      = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
