[package]
name    = "cfs_bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "cfs_bindings"
path = "src/lib.rs"

[build-dependencies]
# bindgen generates Rust FFI bindings from _defs/mission_config.h at build time
bindgen = "0.69"

[dependencies]
log        = { workspace = true }
ccsds_wire = { path = "../ccsds_wire" }

[dev-dependencies]
ccsds_wire = { path = "../ccsds_wire" }

[lints]
workspace = true

# The workspace-wide `unsafe_code = deny` is overridden for this crate only
# via a crate-root `#![allow(unsafe_code)]` attribute in src/lib.rs, because
# bindgen-generated FFI may emit `unsafe extern "C"` blocks and raw pointer
# types. See docs/architecture/06-ground-segment-rust.md §1.2 — the override
# is explicitly authorised for `cfs_bindings` only.
