[package]
name    = "ground_station"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ground_station"
path = "src/main.rs"

[dependencies]
anyhow     = { workspace = true }
log        = { workspace = true }
env_logger = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true }
bytes      = { workspace = true }
crc        = { workspace = true }
ccsds_wire = { path = "../ccsds_wire" }

[dev-dependencies]
tokio = { workspace = true, features = ["io-util", "test-util"] }

[lints]
workspace = true
