[package]
name    = "ground_station"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ground_station"
path = "src/main.rs"

[[bin]]
name = "demo_injector"
path = "src/bin/demo_injector.rs"

[dependencies]
anyhow     = { workspace = true }
log        = { workspace = true }
env_logger = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true }
bytes      = { workspace = true }
crc        = { workspace = true }
ccsds_wire = { path = "../ccsds_wire" }
cfdp-core  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
axum       = { workspace = true }
tower      = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
time       = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true, features = ["io-util", "test-util"] }
tempfile = { workspace = true }

[lints]
workspace = true
